syntax = "proto3";

// kind可不填，平台根据phone_number区分账号类型

// 登录验证
message LoginRequest {
    string phone_number = 1;
    string password_md5 = 2;
    string kind = 3;    // consumer-客户, merchant-商家
};

message LoginResponse {
    string session_key = 1;
    // TODO... 是否返回账号资料
};


// 注册
message RegisterRequest {
    string phone_number = 1;
    string password = 2;
    string password_md5 = 3;
    string kind = 4;    // consumer-客户, merchant-商家
};

message RegisterResponse {
};


// 重置密码
message ChangePasswordRequest {
    string phone_number = 1;
    string password = 2;
    string password_md5 = 3;
    string kind = 4;    // consumer-客户, merchant-商家
};

message ChangePasswordResponse {
    string change_result = 1;
};


//////////////////////////短信验证码在level1处理//////////////////
// 获取短信验证码
message GetSMSCodeRequest {
    string phone_number = 1;
    string kind = 2;        // consumer-客户, merchant-商家
};

message GetSMSCodeResponse {
    string sms_code = 1;    // 短信验证码
};


// 验证短信验证码
message VerifySMSCodeRequest {
    string phone_number = 1;
    string kind = 2;        // consumer-客户, merchant-商家
    string sms_code = 3;    // 短信验证码
}

message VerifySMSCodeResponse {

}